# doc-manager-cli

./: Cargo.toml  README.md  bump.sh  usage_rules.md
docs/plans/: 2026-02-17-rename-command-design.md  2026-02-17-subfolder-renaming-design.md  2026-02-17-subfolder-renaming-impl.md
src/: config.rs  main.rs  renamer.rs
